Empty fn definitions, testing organization, small bug fixes on LL functions

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,10 @@ add_subdirectory(lib)
 include_directories(${WLLS_HEADERS_DIR})
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(${PROJECT_NAME} src/tests.cpp)
+set(TESTS_SOURCE_FILES src/LinkedListTests.cpp
+        src/WLLSTests.cpp)
+
+add_executable(${PROJECT_NAME} ${TESTS_SOURCE_FILES})
 
 target_link_libraries(${PROJECT_NAME} linkedlist gtest gtest_main)
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
