basic main file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,12 @@ set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
 set(WLLS_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 set(WLLS_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
 set(WLLS_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
+set(WLLS_INSTALL_DATA_DIR ${PROJECT_SOURCE_DIR}/data)
 
 set(WLLS_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/${PROJECT_NAME})
 
 include_directories(${WLLS_INSTALL_INCLUDE_DIR})
+#include_directories(${WLLS_INSTALL_DATA_DIR})
 include_directories(${WLLS_HEADERS_DIR})
 
 add_subdirectory(src)
