Created all instr files

--- a/src/weirdlanguage/wlcommands/CMakeLists.txt
+++ b/src/weirdlanguage/wlcommands/CMakeLists.txt
@@ -8,8 +8,26 @@ set(WLCOMMANDS_SOURCE_FILES
     WLCommand.h
     VarIntInstruction.cpp
     VarIntInstruction.h
-        VarListInstruction.cpp
-        VarListInstruction.h
+    VarListInstruction.cpp
+    VarListInstruction.h
+    CombineInstruction.cpp
+    CombineInstruction.h
+    GetInstruction.cpp
+    GetInstruction.h
+    SetInstruction.cpp
+    SetInstruction.h
+    CopyInstruction.cpp
+    CopyInstruction.h
+    ChsInstruction.cpp
+    ChsInstruction.h
+    AddInstruction.cpp
+    AddInstruction.h
+    GotoInstruction.cpp
+    GotoInstruction.h
+    IfInstruction.cpp
+    IfInstruction.h
+    HltInstruction.cpp
+    HltInstruction.h
 )
 
 set(WLCOMMANDS_HEADER_FILES
@@ -17,6 +35,14 @@ set(WLCOMMANDS_HEADER_FILES
     WLCommand.h
     VarIntInstruction.h
     VarListInstruction.h
+    CombineInstruction.h
+    GetInstruction.h
+    SetInstruction.h
+    CopyInstruction.h
+    ChsInstruction.h
+    AddInstruction.h
+    GotoInstruction.h
+    IfInstruction.h
 )
 
 add_library(${PROJECT_NAME} SHARED STATIC ${WLCOMMANDS_SOURCE_FILES})
